fix spacing on section titles

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,8 @@ p, h1, h2, h3, h4, h5, h6 {
 #projects-section {
     height: 40vh;
     background-color: #FFFFFF;
+    padding-top: 4vh;
+    padding-bottom: 4vh; 
 }
 /* PROJECTS SECTION END */
 
@@ -83,7 +85,9 @@ p, h1, h2, h3, h4, h5, h6 {
 
 
 /* ABOUT ME SECTION */
-#about-section { 
+#about-section {
+    padding-top: 4vh;
+    padding-bottom: 4vh;
     height: 40vh;
     background-color: #fff1e6;
 
@@ -126,7 +130,9 @@ p, h1, h2, h3, h4, h5, h6 {
     margin-bottom: 4vh;
 }
 
-
+.text-center {
+    text-align: center;
+}
 
 
 
